Fix grammar mistake

--- a/cv-johannes-smit.tex
+++ b/cv-johannes-smit.tex
@@ -84,7 +84,7 @@ Since joining Amey Strategic Consulting, I have been an analyst in a variety of 
 
 	My dissertation involved combining modern neural networks using Keras with more traditional regression and Gaussian processes models with the aim of providing more human-understandable insights to machine learning algorithms.
 	I successfully modelled a neural network using multiple techniques in a way that simplified the complex internal system to well-understood statistical processes.
-	Other modules included machine learning and spatial-temporal statistics.
+	Other modules included machine learning and spatio-temporal statistics.
 
 	\item 2009--2015: Felpham Community College (Felpham, UK)
 
