--- a/cv-johannes-smit.tex
+++ b/cv-johannes-smit.tex
@@ -98,7 +98,7 @@ Since joining Amey Strategic Consulting, I have been an analyst in a variety of 
 	I am learning the programming languages \enquote{Julia} and \enquote{Typescript} as a hobby, some of my projects can be found on my GitHub profile (\href{https://github.com/hasnep/}{\nolinkurl{github.com/hasnep}}).
 
 	\item In school, I was a lead animator and team coordinator in the UK Schools Computer Animation Competition.
-	Our team achieved first in our category twice, and received the \enquote{EA Recognition Award] in our third year.
+	Our team achieved first in our category twice, and received the \enquote{EA Recognition Award} in our third year.
 	This experience improved my time management and strengthened my ability to lead a team in bringing a project to completion.
 
 	\item Foreign languages include Afrikaans (native), Spanish (intermediate) and Mandarin (beginner).
