Reword personal projects

--- a/cv-johannes-smit.tex
+++ b/cv-johannes-smit.tex
@@ -95,7 +95,7 @@ Since joining Amey Strategic Consulting, I have been an analyst in a variety of 
 
 \begin{itemize}
 	\item I am fluent in Python and R for data analysis, and particularly enjoy data visualisation with the \texttt{ggplot2} and \texttt{shiny} packages.
-	I am learning the programming languages \enquote{Julia} and \enquote{Typescript} as a hobby, some of my projects can be found on my GitHub profile (\href{https://github.com/hasnep/}{\nolinkurl{github.com/hasnep}}).
+	I develop personal projects in the languages Julia and Typescript as a hobby, which can be found on my GitHub profile (\href{https://github.com/hasnep/}{\nolinkurl{github.com/hasnep}}).
 
 	\item In school, I was a lead animator and team coordinator in the UK Schools Computer Animation Competition.
 	Our team achieved first in our category twice, and received the \enquote{EA Recognition Award} in our third year.
