Update website url

--- a/cv-johannes-smit.tex
+++ b/cv-johannes-smit.tex
@@ -35,15 +35,13 @@
 	\vspace{1em}
 	{\large
 	% Email
-	\href{mailto:hannes.smit@live.co.uk}{\nolinkurl{hannes.smit@live.co.uk}}
-	% \href{mailto:h@nnessm.it}{\nolinkurl{h@nnessm.it}} 
+	Email: \href{mailto:h@nnes.dev}{\nolinkurl{h@nnes.dev}} 
 	\hfill
 	% Website
-	\href{https://hasnep.netlify.app}{\nolinkurl{hasnep.netlify.app}}
-	% \href{https://ha.nnessm.it/}{\nolinkurl{ha.nnessm.it}}
+	Website: \href{https://ha.nnes.dev/}{\nolinkurl{ha.nnes.dev}}
 	\hfill
 	% GitHub
-	\href{https://github.com/hasnep/}{\nolinkurl{github.com/hasnep}}
+	GitHub: \href{https://github.com/hasnep/}{\nolinkurl{github.com/hasnep}}
 	\\
 	}
 \end{center}
@@ -95,7 +93,7 @@ Since joining Amey Strategic Consulting, I have been an analyst in a variety of 
 
 \begin{itemize}
 	\item I am fluent in Python and R for data analysis, and particularly enjoy data visualisation with the \texttt{ggplot2} and \texttt{shiny} packages.
-	I develop personal projects in the languages Julia and Typescript as a hobby, which can be found on my GitHub profile (\href{https://github.com/hasnep/}{\nolinkurl{github.com/hasnep}}).
+	I develop personal projects in the languages Julia and Typescript as a hobby, which can be found on my website (\href{https://ha.nnes.dev/}{\nolinkurl{ha.nnes.dev}}).
 
 	\item In school, I was a lead animator and team coordinator in the UK Schools Computer Animation Competition.
 	Our team achieved first in our category twice, and received the \enquote{EA Recognition Award} in our third year.
