--- a/cv-johannes-smit.tex
+++ b/cv-johannes-smit.tex
@@ -6,7 +6,7 @@
 % \setmainfont{CMU Concrete}
 
 % Margins
-\usepackage[margin=1in]{geometry}
+\usepackage[margin=3cm]{geometry}
 
 % UK English
 \usepackage[UKenglish]{babel}
