Change font to CMU Concrete

--- a/cv-johannes-smit.tex
+++ b/cv-johannes-smit.tex
@@ -1,9 +1,9 @@
 % !TEX program = XeLaTeX
 \documentclass[11pt, a4paper]{article}
 
-% \usepackage{fontspec}
-% % Computer Modern from: https://cm-unicode.sourceforge.io/download.html
-% \setmainfont{CMU Concrete}
+\usepackage{fontspec}
+% Computer Modern from: https://cm-unicode.sourceforge.io/download.html
+\setmainfont{CMU Concrete}
 
 % Margins
 \usepackage[margin=3cm]{geometry}
