Remove custom font

--- a/cv-johannes-smit.tex
+++ b/cv-johannes-smit.tex
@@ -1,9 +1,9 @@
 % !TEX program = XeLaTeX
 \documentclass[11pt, a4paper]{article}
 
-\usepackage{fontspec}
-% Computer Modern from: https://cm-unicode.sourceforge.io/download.html
-\setmainfont{CMU Concrete}
+% \usepackage{fontspec}
+% % Computer Modern from: https://cm-unicode.sourceforge.io/download.html
+% \setmainfont{CMU Concrete}
 
 % Margins
 \usepackage[margin=3cm]{geometry}
@@ -57,6 +57,7 @@ Since joining Amey Strategic Consulting, I have been an analyst in a variety of 
 	\begin{itemize}
 		\item I am part of a team working with Amey Highways to deliver the \enquote{ADEPT Live Labs innovation programme} for Kent County Council, which aims to develop data-led approaches to the management of asset management and steward efficiency.
 		This involved building a dashboard integrating existing data to support analytics driven decision making within the county's teams and researching opportunities for innovation using sensors and IoT devices.
+		% Mention prediction model and heatmap visualisation and homepage
 		\item I was a maintainer of the team's financial platform --- an R Shiny dashboard that allows team members and project managers to monitor expenditure, register risks, and keep track of invoices, while synchronising the data with a relational database.
 		\item Using R, I collaborated with Amey's HR department to complete an analysis of the gender pay gap across all departments in wider Amey.
 		The visualisations, statistics and forecasts were used to guide the company's decision making with regards to gender equality.
