--- a/cv-johannes-smit.tex
+++ b/cv-johannes-smit.tex
@@ -90,6 +90,14 @@ Since joining Amey Strategic Consulting, I have been an analyst in a variety of 
 	My A-levels were Mathematics (A), Further Mathematics (B), Physics (B), AS Spanish (B) and STEP Mathematics (Level 3).
 \end{itemize}
 
+\subsection*{Certifications}
+
+\begin{itemize}
+\item Microsoft Certified: Azure Data Scientist Associate (September 2020)
+
+\item Microsoft Certified: Azure Fundamentals (May 2020)
+\end{itemize}
+
 \subsection*{Skills}
 
 \begin{itemize}
