Remove months from university

--- a/cv-johannes-smit.tex
+++ b/cv-johannes-smit.tex
@@ -79,7 +79,7 @@ Since joining Amey Strategic Consulting, I have been an analyst in a variety of 
 \subsection*{Education}
 
 \begin{itemize} 
-	\item September 2015--June 2019: MMath Mathematics --- 2:1 (University of Exeter, UK)
+	\item 2015--2019: MMath Mathematics --- 2:1 (University of Exeter, UK)
 
 	My dissertation involved combining modern neural networks using Keras with more traditional regression and Gaussian processes models with the aim of providing more human-understandable insights to machine learning algorithms.
 	I successfully modelled a neural network using multiple techniques in a way that simplified the complex internal system to well-understood statistical processes.
