--- a/cv-johannes-smit.tex
+++ b/cv-johannes-smit.tex
@@ -17,6 +17,11 @@
 % Remove page numbers
 \pagenumbering{gobble}
 
+% Reduce hyphenation
+\pretolerance=5000
+\tolerance=9000
+\emergencystretch=10pt
+
 % Line spacing
 \usepackage{setspace}
 \setstretch{1}
