Reword skills section

--- a/cv-johannes-smit.tex
+++ b/cv-johannes-smit.tex
@@ -103,9 +103,10 @@ Since joining Amey Strategic Consulting, I have been an analyst in a variety of 
 \subsection*{Skills}
 
 \begin{itemize}
-	\item I am fluent in Python and R for data analysis, and particularly enjoy data visualisation with the \texttt{ggplot2} and \texttt{shiny} packages.
-	I develop personal projects in the languages Julia and Typescript as a hobby, which can be found on my website (\href{https://ha.nnes.dev/}{\nolinkurl{ha.nnes.dev}}).
-
+	\item As well as being fluent in Python and R for data analysis, I develop personal open-source projects in the languages Julia and Typescript as a hobby.
+	For example, I created `DataSkimmer.jl`, a Julia package to quickly summarise tabular data in the terminal.
+	All of my personal projects can be found on my website (\href{https://ha.nnes.dev/}{\nolinkurl{ha.nnes.dev}}).
+	
 	\item In school, I was a lead animator and team coordinator in the UK Schools Computer Animation Competition.
 	Our team achieved first in our category twice, and received the \enquote{EA Recognition Award} in our third year.
 	This experience improved my time management and strengthened my ability to lead a team in bringing a project to completion.
