--- a/cv-johannes-smit.tex
+++ b/cv-johannes-smit.tex
@@ -110,8 +110,8 @@ Since joining Amey Strategic Consulting, I have been an analyst in a variety of 
 	\item In school, I was a lead animator and team coordinator in the UK Schools Computer Animation Competition.
 	Our team achieved first in our category twice, and received the \enquote{EA Recognition Award} in our third year.
 	This experience improved my time management and strengthened my ability to lead a team in bringing a project to completion.
-
-	\item Foreign languages include Afrikaans (native), Spanish (intermediate) and Mandarin (beginner).
+	
+	\item Languages: English (native), Afrikaans (fluent), Spanish (intermediate) and Mandarin (beginner).
 \end{itemize}
 
 \noindent References are available on request.
