Add non-breaking spaces

--- a/cv-johannes-smit.tex
+++ b/cv-johannes-smit.tex
@@ -94,7 +94,7 @@ Since joining Amey Strategic Consulting, I have been an analyst in a variety of 
 
 	\item 2009--2015: Felpham Community College (Felpham, UK)
 
-	My A-levels were Mathematics (A), Further Mathematics (B), Physics (B), AS Spanish (B) and STEP Mathematics (Level 3).
+	My A-levels were Mathematics~(A), Further~Mathematics~(B), Physics~(B), AS~Spanish~(B) and STEP~Mathematics~(Level~3).
 \end{itemize}
 
 \subsection*{Certifications}
@@ -109,7 +109,7 @@ Since joining Amey Strategic Consulting, I have been an analyst in a variety of 
 
 \begin{itemize}
 	\item As well as being fluent in Python and R for data analysis, I develop personal open-source projects in the languages Julia and Typescript as a hobby.
-	For example, I created `DataSkimmer.jl`, a Julia package to quickly summarise tabular data in the terminal.
+	For example, I created \texttt{DataSkimmer.jl}, a Julia package to quickly summarise tabular data in the terminal.
 	All of my personal projects can be found on my website (\href{https://ha.nnes.dev/}{\nolinkurl{ha.nnes.dev}}).
 	
 	\item In school, I was a lead animator and team coordinator in the UK Schools Computer Animation Competition.
