--- a/cv-johannes-smit.tex
+++ b/cv-johannes-smit.tex
@@ -113,7 +113,7 @@ Since joining Amey Strategic Consulting, I have been an analyst in a variety of 
 	All of my personal projects can be found on my website (\href{https://ha.nnes.dev/}{\nolinkurl{ha.nnes.dev}}).
 	
 	\item In school, I was a lead animator and team coordinator in the UK Schools Computer Animation Competition.
-	Our team achieved first in our category twice, and received the \enquote{EA Recognition Award} in our third year.
+	Our team achieved first place in our category twice, and received an additional award in recognition of our talent.
 	This experience improved my time management and strengthened my ability to lead a team in bringing a project to completion.
 	
 	\item Languages: English (native), Afrikaans (fluent), Spanish (intermediate) and Mandarin (beginner).
