--- a/cv-johannes-smit.tex
+++ b/cv-johannes-smit.tex
@@ -58,19 +58,19 @@ Since joining Amey Strategic Consulting, I have been an analyst in a variety of 
 	\item July 2019--Present: Strategic Consultant, Amey Strategic Consulting (London, UK)
 	\begin{itemize}
 		\item I am part of a team working with Amey Highways to deliver the \enquote{ADEPT Live Labs innovation programme} for Kent County Council, which aims to develop data-led approaches to managing the county's assets.
-		This involved a building a PostgreSQL database and using Airflow to schedule data ingestion from many sources.
-		To deliver a platform for data-driven decision making, I built a React dashboard using Plotly and Mapbox to clearly visualise the large amount of data.
-		Other tasks included designing and building a proof of concept system to ingest and display realtime IoT data from multiple sensors and designing a machine learning timeseries model for workload prediction.
+		To deliver a web-platform for data-driven decision making, I helped build a React dashboard using Plotly and Mapbox to clearly visualise the large amount of data.
+		I identified inefficiency in a stakeholder's planning due to uncertainty about future work, so I developed a predictive machine learning model to enable data-driven planning.
+		My personal highlight was designing and building a proof of concept application to manage and collect data from a network of IoT sensors which will allow for real-time monitoring of drainage assets.
 		
-		\item I am a maintainer of the team's financial platform --- an R Shiny dashboard that allows team members and project managers to monitor expenditure, register risks, and keep track of invoices, while synchronising the data with a relational database.
-		
-		\item Using R, I collaborated with Amey's HR department to complete an analysis of the gender pay gap across all departments in wider Amey.
-		The visualisations, statistics and forecasts were used to guide the company's decision making with regards to gender equality in pay rates.
+		\item I collaborated with Amey's HR department to complete an analysis of the gender pay gap across all departments in wider Amey using R.
+		The visualisations, statistics and forecasts I produced were used to guide the company's decision making with regards to gender equality in pay rates.
 		I then created a Python package to automatically perform these forecasts and trained an HR analyst with no prior Python knowledge to produce original analyses.
 		
 		\item I completed a focused two week analytics sprint on the maintenance contract fulfilled by Amey Highways for Staffordshire County Council.
 		I collected user-stories and datasets from both the Amey and Staffordshire teams about the processes used and delivered a presentation of data visualisations, highlighting key successes and opportunities.
 		
+		\item I am a maintainer of the team's financial platform --- an R Shiny dashboard that allows team members and project managers to monitor expenditure, register risks, and keep track of invoices, while synchronising the data with a relational database.
+
 		\item I oversaw the deployment of a Python tool to automate sending email reminders for Amey TPT.
 		This was a task that previously took multiple days each month but can now be performed in a few minutes, saving significant resource time.
 	\end{itemize}
