Change certifications wording

--- a/cv-johannes-smit.tex
+++ b/cv-johannes-smit.tex
@@ -100,9 +100,9 @@ Since joining Amey Strategic Consulting, I have been an analyst in a variety of 
 \subsection*{Certifications}
 
 \begin{itemize}
-\item Microsoft Certified: Azure Data Scientist Associate (September 2020)
+	\item September 2020: Microsoft Certified: Azure Data Scientist Associate 
 
-\item Microsoft Certified: Azure Fundamentals (May 2020)
+	\item May 2020: Microsoft Certified: Azure Fundamentals 
 \end{itemize}
 
 \subsection*{Skills}
