Change units to mm

--- a/template.tex
+++ b/template.tex
@@ -5,7 +5,7 @@
 % \setmainfont{CMU Concrete}
 
 % Margins
-\usepackage[margin=3.5cm]{geometry}
+\usepackage[margin=35mm]{geometry}
 
 % UK English
 \usepackage[UKenglish]{babel}
