Decrease vertical margins

--- a/template.tex
+++ b/template.tex
@@ -5,7 +5,7 @@
 % \setmainfont{CMU Concrete}
 
 % Margins
-\usepackage[margin=35mm]{geometry}
+\usepackage[hmargin=35mm, vmargin=20mm]{geometry}
 
 % UK English
 \usepackage[UKenglish]{babel}
