Add cjk compatability

--- a/template.tex
+++ b/template.tex
@@ -4,6 +4,11 @@
 % % Computer Modern from: https://cm-unicode.sourceforge.io/download.html
 % \setmainfont{CMU Concrete}
 
+% CJK text
+\usepackage{xeCJK}
+% \setmainfont{Latin Modern Roman}
+\setCJKmainfont{Noto Serif CJK TC}
+
 % Margins
 \usepackage[hmargin=35mm, vmargin=20mm]{geometry}
 
