Comment out CJK font code

--- a/template.tex
+++ b/template.tex
@@ -4,10 +4,10 @@
 % % Computer Modern from: https://cm-unicode.sourceforge.io/download.html
 % \setmainfont{CMU Concrete}
 
-% CJK text
-\usepackage{xeCJK}
+% % CJK text
+% \usepackage{xeCJK}
 % \setmainfont{Latin Modern Roman}
-\setCJKmainfont{Noto Serif CJK TC}
+% \setCJKmainfont{Noto Serif CJK TC}
 
 % Margins
 \usepackage[hmargin=15mm, vmargin=15mm]{geometry}
