Allow LaTeX output to span across two pages

--- a/src/template.tex
+++ b/src/template.tex
@@ -1,4 +1,4 @@
-\documentclass[9pt, a4paper]{extarticle}
+\documentclass[a4paper]{article}
 
 % \usepackage{fontspec}
 % % Computer Modern from: https://cm-unicode.sourceforge.io/download.html
@@ -10,11 +10,10 @@
 % \setCJKmainfont{Noto Serif CJK TC}
 
 % Margins
-\usepackage[hmargin=2.5em, vmargin=1.5em]{geometry}
+\usepackage[hmargin=25mm, vmargin=35mm]{geometry}
 
 % UK English
 \usepackage[UKenglish]{babel}
-
 
 % Remove page numbers
 \pagenumbering{gobble}
@@ -24,9 +23,9 @@
 \tolerance=9000
 \emergencystretch=10pt
 
-% Line spacing
+% Slightly increase line spacing
 \usepackage{setspace}
-\setstretch{1.05}
+\setstretch{1.1}
 
 % URLs
 \usepackage[hidelinks]{hyperref}
